Code cleanup and fix tests
IBP-4662